modify remocon in resume page

--- a/resume.html
+++ b/resume.html
@@ -243,6 +243,7 @@ SOFTWARE.
                 <li class="experience">Experience</li>
                 <li class="research">Research</li>
                 <li class="awards">Awards</li>
+                <li class="techniques">Techniques</li>
                 <!-- <li class="abilities">Abilities</li> -->
             </ul>
             <div class="_toggle2"></div>
@@ -255,6 +256,7 @@ SOFTWARE.
                 <li class="experience">커리어</li>
                 <li class="research">연구</li>
                 <li class="awards">수상내역</li>
+                <li class="techniques">기술</li>
             </ul>
             <div class="_toggle2"></div>
         </nav>
@@ -594,7 +596,7 @@ SOFTWARE.
             </div>
         </section>
     
-        <section class="_track _content-section _article-section " id = "awards">
+        <section class="_track _content-section _article-section " id = "techniques">
             <h1 class='eng'>Techniques</h1>
             <h1 class='kor'>기술</h1>
         
