--- a/default.html
+++ b/default.html
@@ -115,7 +115,7 @@ SOFTWARE.
     <footer id='footer'>
         <div class='_overlay' style='background-color: rgb(24,24,24)'></div>
         <div class='_footer-line'>
-            <h1>ⓒ 2019-2021 <a href='http://jaihyunp.github.io/'>Jaihyun Park</a>. All rights reserved.</h1>
+            <h1>ⓒ 2019-2021 <a href='http://jaihyunp.github.io/'>JaiHyun Park</a>. All rights reserved.</h1>
             <p style='font-size:10pt;font-family:"noto-eng","noto-kor";margin-bottom:10px'><a href='mailto:jhyunp@snu.ac.kr'>jhyunp@snu.ac.kr</a></p>
             <!-- <p>This page is under construction.</p> -->
             <p>"When you see a good move, look for a better one." - Emanuel Lasker</p>
