Add related News to iDASH2020 post, modify skills

--- a/resume.html
+++ b/resume.html
@@ -605,12 +605,12 @@ SOFTWARE.
                 <h1 class='kor'>스킬</h1>
                 <ul class='grid-2-1-ul abilities-ul'>
                     <li><h1>C/C++</h1><p>★★★★★</p></li>  
-                    <li><h1>Python</h1><p>★★★★☆</p></li>  
-                    <li><h1>Latex</h1><p>★★★★☆</p></li>  
+                    <li><h1>Python</h1><p>★★★★★</p></li>  
+                    <li><h1>Latex</h1><p>★★★★★</p></li>  
                     <li><h1>HTML/CSS</h1><p>★★★★☆</p></li>  
+                    <li><h1>Git</h1><p>★★★★☆</p></li>  
                     <li><h1>Javascript/jQuery</h1><p>★★★☆☆</p></li>  
                     <li><h1>Java</h1><p>★★★☆☆</p></li>  
-                    <li><h1>Git</h1><p>★★★☆☆</p></li>  
                     <li><h1>Bash/Shell</h1><p>★☆☆☆☆</p></li>  
                 </ul>
             </div>
