update recent publications
- IJIS
- NAACL
- BMC

--- a/resume.html
+++ b/resume.html
@@ -483,6 +483,38 @@ SOFTWARE.
                 <p class='eng'>Authors are listed in alphabetical order by last name, unless an asterisk(*) is indicated.</p>
                 <p class='kor'>저자는 철자순으로 나열했고, 주저자가 있는 경우 별표(*)로 표시했습니다.</p>
                 <ul class='brief-ul'>
+                    <li>
+                        <h1>
+                            Efficient verifiable computation over quotient polynomial rings
+                        </h1>
+                        <p class='eng'>*<b>Jai Hyun Park</b>, Jung Hee Cheon, Dongwoo Kim</p>
+                        <p class='kor'>*<b>박재현</b>, 천정희, 김동우</p>
+                        <p>Internationl Journal of Information Security, 2022</p>
+                    </li>
+                    <li>
+                        <h1>
+                            Privacy-Preserving Text Classification on BERT Embeddings with Homomorphic Encryption
+                        </h1>
+                        <p class='eng'>*Garam Lee, *Minsoo Kim, *<b>Jai Hyun Park</b>, Seungwon Hwang, Jung Hee Cheon</p>
+                        <p class='kor'>*이가람, *김민수, *<b>박재현</b>, 황승원, 천정희</p>
+                        <p>To be appeared in NAACL 2022 (short)</p>
+                    </li>
+                    <li>
+                        <h1>
+                            Efficient Homomorphic Evaluation on Large Intervals <a href='https://eprint.iacr.org/2022/280' style='border:none'><img src='assets/icons/link-open-solid2.png' style='width:15px;height:15px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a>
+                        </h1>
+                        <p class='eng'>Jung Hee Cheon, Wootae Kim, <b>Jai Hyun Park</b></p>
+                        <p class='kor'>김우태, <b>박재현</b>, 천정희</p>
+                        <p>Preprint</p>
+                    </li>
+                    <li>   
+                        <h1>
+                            Secure tumor classification by shallow neural network using homomorphic encryption<a href='https://trebuchet.public.springernature.app/get_content/4b1b9674-eda5-4f7f-bfb2-565dbb8a0a9d' style='border:none'><img src='assets/icons/link-open-solid2.png' style='width:15px;height:15px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a>
+                        </h1>
+                        <p class='eng'>*Seungwan Hong, <b>Jai Hyun Park</b>, Wonhee Cho, Hyeongmin Choe, Jung Hee Cheon</p>
+                        <p class='kor'>*홍승완, <b>박재현</b>, 조원희, 최형민, 천정희</p>
+                        <p>BMC Genomics, 23.1: 1-19, 2022</p>
+                    </li>  
                     <li>   
                         <h1>
                             Towards a Practical Cluster Analysis over Encrypted Data<a href='http://eprint.iacr.org/2019/465' style='border:none'><img src='assets/icons/link-open-solid2.png' style='width:15px;height:15px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a>
@@ -547,8 +579,8 @@ SOFTWARE.
                 <h1 class='kor'>수상</h1>
                 <ul class='brief-ul'>
                     <li>   
-                        <h1 class='eng'>One of the Winners of Track 1 @iDASH 2020</h1>
-                        <h1 class='kor'>Track1 공동우승 @iDASH 2020</h1>
+                        <h1 class='eng'>First Place of Track 1 @iDASH 2020</h1>
+                        <h1 class='kor'>Track1 우승 @iDASH 2020</h1>
                         <p>2020.12.</p>
                         <p class='eng'>- National Institutes of Health (NIH)</p>
                         <p class='kor'>- National Institutes of Health (NIH)</p>
@@ -640,12 +672,12 @@ SOFTWARE.
                 <h1 class='kor'>스킬</h1>
                 <ul class='grid-2-1-ul abilities-ul'>
                     <li><h1>C/C++</h1><p>★★★★★</p></li>  
-                    <li><h1>Python</h1><p>★★★★★</p></li>  
-                    <li><h1>LaTeX</h1><p>★★★★★</p></li>  
-                    <li><h1>HTML/CSS</h1><p>★★★★☆</p></li>  
-                    <li><h1>Git</h1><p>★★★★☆</p></li>  
-                    <li><h1>Javascript/jQuery</h1><p>★★★☆☆</p></li>  
-                    <li><h1>Java</h1><p>★★★☆☆</p></li>  
+                    <li><h1>Python</h1><p>★★★★☆</p></li>  
+                    <li><h1>LaTeX</h1><p>★★★★☆</p></li>  
+                    <li><h1>HTML/CSS</h1><p>★★★☆☆</p></li>  
+                    <li><h1>Git</h1><p>★★★☆☆</p></li>  
+                    <li><h1>Javascript/jQuery</h1><p>★★☆☆☆</p></li>  
+                    <li><h1>Java</h1><p>★★☆☆☆</p></li>  
                     <li><h1>Bash/Shell</h1><p>★☆☆☆☆</p></li>  
                 </ul>
             </div>
