--- a/resume.html
+++ b/resume.html
@@ -485,7 +485,7 @@ SOFTWARE.
                 <ul class='brief-ul'>
                     <li>
                         <h1>
-                            Efficient verifiable computation over quotient polynomial rings
+                            Efficient verifiable computation over quotient polynomial rings<a href='https://link.springer.com/article/10.1007/s10207-022-00590-x' style='border:none'><img src='assets/icons/link-open-solid2.png' style='width:15px;height:15px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a>
                         </h1>
                         <p class='eng'>*<b>Jai Hyun Park</b>, Jung Hee Cheon, Dongwoo Kim</p>
                         <p class='kor'>*<b>박재현</b>, 천정희, 김동우</p>
@@ -524,7 +524,7 @@ SOFTWARE.
                         <p>In International Conference on Selected Areas in Cryptography (SAC), pp. 227-249. Springer, Cham, 2019</p>
                     </li>  
 
-                    <li>
+<!--                     <li>
                         <h1 class='eng'>
                             Robust Image Fusion Using Stationary Wavelet Transform<a href='http://koreascience.or.kr/article/JAKO201105462029416.page' style='border:none'><img src='assets/icons/link-open-solid2.png' style='width:15px;height:15px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a>
                         </h1>
@@ -535,7 +535,7 @@ SOFTWARE.
                         <p class='kor'>*김희훈, 강승효, <b>박재현</b>, 하현호, 임진수, 임동훈</p>
                         <p class='eng'>@The Korean Journal of Applied Statistics, vol.24, no.6, pp.1181-1196, 2011</p>
                         <p class='kor'>@한국통계학회 응용통계연구지, vol.24, no.6, pp.1181-1196, 2011</p>
-                    </li>    
+                    </li>     -->
                 </ul>
             </div>
 
