--- a/resume.html
+++ b/resume.html
@@ -524,7 +524,7 @@ SOFTWARE.
                         <p>In International Conference on Selected Areas in Cryptography (SAC), pp. 227-249. Springer, Cham, 2019</p>
                     </li>  
 
-<!--                     <li>
+                    <li>
                         <h1 class='eng'>
                             Robust Image Fusion Using Stationary Wavelet Transform<a href='http://koreascience.or.kr/article/JAKO201105462029416.page' style='border:none'><img src='assets/icons/link-open-solid2.png' style='width:15px;height:15px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a>
                         </h1>
@@ -535,7 +535,7 @@ SOFTWARE.
                         <p class='kor'>*김희훈, 강승효, <b>박재현</b>, 하현호, 임진수, 임동훈</p>
                         <p class='eng'>@The Korean Journal of Applied Statistics, vol.24, no.6, pp.1181-1196, 2011</p>
                         <p class='kor'>@한국통계학회 응용통계연구지, vol.24, no.6, pp.1181-1196, 2011</p>
-                    </li>     -->
+                    </li>
                 </ul>
             </div>
 
@@ -545,8 +545,14 @@ SOFTWARE.
 
                 <ul class='brief-ul'>
                     <li>   
+                        <h1>Secure Lookup Table with Homomorphic Encryption</h1>
+                        <p class='eng'>2022 Korean Mathematical Society Spring Meeting, Virtual | 2022.4.29.</p>
+                        <p class='kor'>@2022 대한수학회 봄 연구발표회, 온라인 | 2022.4.29. </p>
+                    </li>  
+
+                    <li>   
                         <h1>Polynomial Approximation on Wide Domain and Logistic Regression over Encrypted Data</h1>
-                        <p class='eng'>@2020 KMS Annual Meeting in Online | 2020.10.24.</p>
+                        <p class='eng'>@2020 Korean Mathematical Society Fall Meeting, Virtual | 2020.10.24.</p>
                         <p class='kor'>@2020 대한수학회 가을 연구발표회, 온라인 | 2020.10.24. </p>
                     </li>  
 
@@ -554,18 +560,18 @@ SOFTWARE.
                         <h1>Towards a Practical Cluster Analysis over Encrypted Data</h1>
                         <!-- <p class='eng'>Hong-ik Univ., Seoul, Korea | 2019.10.26.</p>
                         <p class='kor'>홍익대학교, 서울, 한국 | 2019.10.26.</p> -->
-                        <p class='eng'>@2019 KMS Annual Meeting in Hong-ik University, Seoul, Korea | 2019.10.26</p>
+                        <p class='eng'>@2019 Korean Mathematical Society Fall Meeting, Hong-ik University, Seoul, Korea | 2019.10.26</p>
                         <p class='kor'>@2019 대한수학회 가을 연구발표회, 홍익대학교, 서울, 한국 | 2019.10.26</p>
                         <p class='eng'>@2019 Selected Areas in Cryptography (SAC) in University of Waterloo, Toronto, Canada | 2019.8.14.</p>
                         <p class='kor'>@2019 Selected Areas in Cryptography (SAC), 워털루대학교, 토론토, 캐나다 | 2019.8.14.</p>
 
                     </li>  
-                    <!-- <li>   
+<!--                     <li>   
                         <h1>Towards a Practical Cluster Analysis over Encrypted Data</h1>
                         <p class='eng'>Univ. of Waterloo, Toronto, Canada | 2019.8.14.</p>
                         <p class='kor'>워털루대학교, 토론토, 캐나다 | 2019.8.14.</p>
                         <p>@2019 Selected Areas in Cryptography</p>
-                    </li>   -->
+                    </li> -->
                 </ul>
             </div>
         </section>
