--- a/resume.html
+++ b/resume.html
@@ -454,8 +454,15 @@ SOFTWARE.
 
                 <ol reversed class='brief-ul'>
                     <li>   
+                        <h1>Secure Lookup Table with Homomorphic Encryption</h1>
+                        <p class='eng'>2022 Korean Mathematical Society Spring Meeting, Virtual | 2022.4.29.</p>
+                        <p class='kor'>@2022 대한수학회 봄 연구발표회, 온라인 | 2022.4.29. </p>
+                    </li>  
+
+                    <li>   
                         <h1>Polynomial Approximation on Wide Domain and Logistic Regression over Encrypted Data</h1>
-                        <p class='eng'>@2020 KMS Annual Meeting in Online | 2020.10.24.</p>
+                        <!-- <p class='eng'>@2020 KMS Annual Meeting in Online | 2020.10.24.</p> -->
+                        <p class='eng'>@2020 Korean Mathematical Society Fall Meeting, Virtual | 2020.10.24.</p>
                         <p class='kor'>@2020 대한수학회 가을 연구발표회, 온라인 | 2020.10.24. </p>
                     </li>  
 
@@ -463,7 +470,8 @@ SOFTWARE.
                         <h1>Towards a Practical Cluster Analysis over Encrypted Data</h1>
                         <!-- <p class='eng'>Hong-ik Univ., Seoul, Korea | 2019.10.26.</p>
                         <p class='kor'>홍익대학교, 서울, 한국 | 2019.10.26.</p> -->
-                        <p class='eng'>@2019 KMS Annual Meeting in Hong-ik University, Seoul, Korea | 2019.10.26</p>
+                        <!-- <p class='eng'>@2019 KMS Annual Meeting in Hong-ik University, Seoul, Korea | 2019.10.26</p> -->
+                        <p class='eng'>@2019 Korean Mathematical Society Fall Meeting, Hong-ik University, Seoul, Korea | 2019.10.26</p>
                         <p class='kor'>@2019 대한수학회 가을 연구발표회, 홍익대학교, 서울, 한국 | 2019.10.26</p>
                         <p class='eng'>@2019 Selected Areas in Cryptography (SAC) in University of Waterloo, Toronto, Canada | 2019.8.14.</p>
                         <p class='kor'>@2019 Selected Areas in Cryptography (SAC), 워털루대학교, 토론토, 캐나다 | 2019.8.14.</p>
