--- a/resume.html
+++ b/resume.html
@@ -403,7 +403,7 @@ SOFTWARE.
                 <ol reversed class='brief-ul'>
                     <li>
                         <h1>
-                            Efficient verifiable computation over quotient polynomial rings<a href='https://eprint.iacr.org/2022/280' style='border:none'><img src='assets/icons/link-open-solid2.png' style='width:15px;height:15px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a>
+                            Efficient verifiable computation over quotient polynomial rings<a href='https://link.springer.com/article/10.1007/s10207-022-00590-x' style='border:none'><img src='assets/icons/link-open-solid2.png' style='width:15px;height:15px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a>
                         </h1>
                         <p class='eng'>*<b>Jai Hyun Park</b>, Jung Hee Cheon, Dongwoo Kim</p>
                         <p class='kor'>*<b>박재현</b>, 천정희, 김동우</p>
@@ -411,7 +411,7 @@ SOFTWARE.
                     </li>
                     <li>   
                         <h1>
-                            Secure tumor classification by shallow neural network using homomorphic encryption<a href='https://trebuchet.public.springernature.app/get_content/4b1b9674-eda5-4f7f-bfb2-565dbb8a0a9d' style='border:none'><img src='assets/icons/link-open-solid2.png' style='width:15px;height:15px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a>
+                            Secure tumor classification by shallow neural network using homomorphic encryption<a href='https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-022-08469-w' style='border:none'><img src='assets/icons/link-open-solid2.png' style='width:15px;height:15px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a>
                         </h1>
                         <p class='eng'>*Seungwan Hong, <b>Jai Hyun Park</b>, Wonhee Cho, Hyeongmin Choe, Jung Hee Cheon</p>
                         <p class='kor'>*홍승완, <b>박재현</b>, 조원희, 최형민, 천정희</p>
