reversed awards list

--- a/resume.html
+++ b/resume.html
@@ -615,7 +615,7 @@ SOFTWARE.
             <div class = 'big-piece subsection'>
                 <h1 class='eng'>Awards</h1>
                 <h1 class='kor'>수상</h1>
-                <ul class='brief-ul'>
+                <ol reversed class='brief-ul'>
                     <li>   
                         <h1 class='eng'>First Place of Track 1 @iDASH 2020</h1>
                         <h1 class='kor'>Track1 우승 @iDASH 2020</h1>
@@ -665,13 +665,13 @@ SOFTWARE.
                         <p class='eng'>- Korean Mathematical Society</p>
                         <p class='kor'>- 대한수학회</p>
                     </li>  
-                </ul>
+                </ol>
             </div>
 
             <div class = 'big-piece subsection'>
                 <h1 class='eng'>Scholarships</h1>
                 <h1 class='kor'>장학금</h1>
-                <ul class='brief-ul'>
+                <ol reversed class='brief-ul'>
                     <li>   
                         <h1 class='eng'>The Presidential Science Scholarship</h1>
                         <h1 class='kor'>대통령과학장학금</h1>
@@ -697,7 +697,7 @@ SOFTWARE.
                         <p class='eng'>- Seun Steel Co.</p>
                         <p class='kor'>- 세운철강 Co.</p>
                     </li>   -->
-                </ul>
+                </ol>
             </div>
         </section>
     
