--- a/resume.html
+++ b/resume.html
@@ -384,7 +384,7 @@ SOFTWARE.
                         <h1>
                             Privacy-Preserving Text Classification on BERT Embeddings with Homomorphic Encryption
                         </h1>
-                        <p class='eng'>*Garam Lee, *Minsoo Kim, *<b>Jai Hyun Park</b>, Seungwon Hwang, Jung Hee Cheon</p>
+                        <p class='eng'>*Garam Lee, *Minsoo Kim, *<b>Jai Hyun Park</b>, Seung-won Hwang, Jung Hee Cheon</p>
                         <p class='kor'>*이가람, *김민수, *<b>박재현</b>, 황승원, 천정희</p>
                         <p>To be appeared in NAACL 2022 (short)</p>
                     </li>
