--- a/resume.html
+++ b/resume.html
@@ -407,7 +407,7 @@ SOFTWARE.
                         </h1>
                         <p class='eng'>*<b>Jai Hyun Park</b>, Jung Hee Cheon, Dongwoo Kim</p>
                         <p class='kor'>*<b>박재현</b>, 천정희, 김동우</p>
-                        <p>Internationl Journal of Information Security, 2022</p>
+                        <p>International Journal of Information Security, 2022</p>
                     </li>
                     <li>   
                         <h1>
