--- a/resume.html
+++ b/resume.html
@@ -418,8 +418,17 @@ SOFTWARE.
                         <p>BMC Genomics, 23.1: 1-19, 2022</p>
                     </li>  
                     <li>
+                        <h1>
+                            Noise Removal using Support Vector Regression in Noisy Document Images<a href='https://www.koreascience.or.kr/article/JAKO201226935182534.page' style='border:none'><img src='assets/icons/link-open-solid2.png' style='width:15px;height:15px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a>
+                        </h1>
+                        <p class='eng'>*Hee Hoon Kim, Seung Hyo Kang, <b>Jai Hyun Park</b>, Hyun Ho Ha, Dong Hoon Lim</p>
+                        <p class='kor'>*김희훈, 강승효, <b>박재현</b>, 하현호, 임동훈</p>
+                        <p class='eng'>@The Korean Journal of Applied Statistics, vol.25, no.4, pp.669-680, 2012</p>
+                        <p class='kor'>@한국통계학회 응용통계연구지, vol.25, no.4, pp.669-680, 2012</p>
+                    </li>    
+                    <li>
                         <h1 class='eng'>
-                            Robust Image Fusion Using Stationary Wavelet Transform<a href='http://koreascience.or.kr/article/JAKO201105462029416.page' style='border:none'><img src='assets/icons/link-open-solid2.png' style='width:15px;height:15px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a>
+                            Robust Image Fusion Using Stationary Wavelet Transform<a href='https://koreascience.or.kr/article/JAKO201105462029416.page' style='border:none'><img src='assets/icons/link-open-solid2.png' style='width:15px;height:15px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a>
                         </h1>
                         <h1 class='kor'>
                             정상 웨이블렛 변환을 이용한 로버스트 영상 융합<a href='http://koreascience.or.kr/article/JAKO201105462029416.page' style='border:none'><img src='assets/icons/link-open-solid2.png' style='width:15px;height:15px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a>
@@ -625,11 +634,11 @@ SOFTWARE.
                     </li>  
 
                     <li>   
-                        <h1 class='eng'>Excellence Awards ($2,000) @Korea Cryptography Contest</h1>
+                        <h1 class='eng'>Excellence Awards ($2,000) @National Cryptography Contest</h1>
                         <h1 class='kor'>우수상 @국가암호공모전</h1>
                         <p>2020.10.</p>
-                        <p class='eng'>- Korea Internet and Security Agency</p>
-                        <p class='kor'>- 한국인터넷진흥원</p>
+                        <p class='eng'>- National Security Research Institute</p>
+                        <p class='kor'>- 국가보안기술연구소</p>
                     </li>  
 
                     <li>   
@@ -672,6 +681,14 @@ SOFTWARE.
                 <h1 class='eng'>Scholarships</h1>
                 <h1 class='kor'>장학금</h1>
                 <ol reversed class='brief-ul'>
+                    <li>   
+                        <h1 class='eng'>BK 21+ Scholarship</h1>
+                        <h1 class='kor'>BK21 연구장학금</h1>
+                        <p class='eng'>2020.3 ~ present</p>
+                        <p class='kor'>2020.3 ~ 현재</p>
+                        <p class='eng'>- Ministry of Education of Korea</p>
+                        <p class='kor'>- 대한민국 교육부</p>
+                    </li>  
                     <li>   
                         <h1 class='eng'>The Presidential Science Scholarship</h1>
                         <h1 class='kor'>대통령과학장학금</h1>
