--- a/about.html
+++ b/about.html
@@ -246,13 +246,23 @@ SOFTWARE.
                 </div>
             </div>
 
-            <div style='width: 300px; background:rgb(24,24,30);border-radius: 10px;margin:auto;margin-top:80px'>
+            <!-- <div style='width: 300px; background:rgb(24,24,30);border-radius: 10px;margin:auto;margin-top:80px'>
                 <a class='eng' href='/resume.html?lang=eng'>
                     <h1 style='font-size:13pt;font-family:"noto-eng","noto-kor";text-align:center;padding:10px;color:white'>SEE MY RÉSUMÉ</h1>
                 </a>
             </div>
             <div style='width:300px; background:rgb(24,24,30);border-radius: 10px;margin:auto'>
                 <a class='kor' href='/resume.html?lang=kor'>
+                    <h1 style='font-size:13pt;font-family:"noto-eng","noto-kor";text-align:center;padding:10px;color:white'>이력서 보기</h1>
+                </a>
+            </div> -->
+            <div style='width: 300px; background:rgb(24,24,30);border-radius: 10px;margin:auto;margin-top:80px'>
+                <a class='eng' href='/assets/CV.pdf'>
+                    <h1 style='font-size:13pt;font-family:"noto-eng","noto-kor";text-align:center;padding:10px;color:white'>SEE MY CV</h1>
+                </a>
+            </div>
+            <div style='width:300px; background:rgb(24,24,30);border-radius: 10px;margin:auto'>
+                <a class='kor' href='/assets/CV.pdf'>
                     <h1 style='font-size:13pt;font-family:"noto-eng","noto-kor";text-align:center;padding:10px;color:white'>이력서 보기</h1>
                 </a>
             </div>
