--- a/resume.html
+++ b/resume.html
@@ -226,7 +226,8 @@ SOFTWARE.
                 Hi, I'm <b>Jai Hyun Park</b>.
                 I am an <b>Integrated PhD student</b> at <b>Seoul National University</b>, majoring in <b>mathematical sciences</b>.
                 Currently, I am interested in <b>cryptography</b>: espeically in Homomorphic Encryption and Verifiable Computing.
-                I hold a Bachelor's degree from the Department of Mathematical Sciences at Seoul National University.
+                I hold a Bachelor's degree from the Department of Mathematical Sciences at Seoul National University. Here is my 
+                <a href="assets/CV.pdf"><b>CV</b></a>.
             </p>
             <p class='kor'>
                 안녕하세요, 저는 <b>박재현</b>입니다.
