update resume.html: fix Korean menubar

--- a/resume.html
+++ b/resume.html
@@ -277,6 +277,7 @@ SOFTWARE.
             <div class="_toggle"></div>
 
             <ul class="_nav-menu">
+                <li class="education">학력</li>
                 <li class="research">연구</li>
                 <li class="experience">커리어</li>
                 <li class="awards">수상내역</li>
