--- a/resume.html
+++ b/resume.html
@@ -411,6 +411,16 @@ SOFTWARE.
                 <h2 class='eng'>Journal</h2>
                 <h2 class='kor'>Journal</h2>
                 <ol reversed class='brief-ul'>
+                    <li class="equal">
+                        <h1>
+                            Efficient Homomorphic Evaluation on Large Intervals 
+                            <!-- <a href='https://eprint.iacr.org/2022/280' style='border:none'><img src='assets/icons/link-open-solid2.png' style='width:15px;height:15px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a> -->
+                        </h1>
+                        <p class='eng'>Jung Hee Cheon, Wootae Kim, <b>Jai Hyun Park</b></p>
+                        <p class='kor'>김우태, <b>박재현</b>, 천정희</p>
+                        <p>To be appered in IEEE Transactions on Information Forensics and Security, 2022</p>
+                    </li>
+
                     <li>
                         <h1>
                             Efficient verifiable computation over quotient polynomial rings<a href='https://link.springer.com/article/10.1007/s10207-022-00590-x' style='border:none'><img src='assets/icons/link-open-solid2.png' style='width:15px;height:15px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a>
@@ -451,18 +461,10 @@ SOFTWARE.
                 </ol>
 
 
-                <h2 class='eng'>Manuscript</h2>
+                <!-- <h2 class='eng'>Manuscript</h2>
                 <h2 class='kor'>Manuscript</h2>
                 <ol reversed class='brief-ul'>
-                    <li class="equal">
-                        <h1>
-                            Efficient Homomorphic Evaluation on Large Intervals <a href='https://eprint.iacr.org/2022/280' style='border:none'><img src='assets/icons/link-open-solid2.png' style='width:15px;height:15px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a>
-                        </h1>
-                        <p class='eng'>Jung Hee Cheon, Wootae Kim, <b>Jai Hyun Park</b></p>
-                        <p class='kor'>김우태, <b>박재현</b>, 천정희</p>
-                        <p>Preprint</p>
-                    </li>
-                </ol>
+                </ol> -->
                 
             </div>
 
