--- a/about.html
+++ b/about.html
@@ -195,9 +195,9 @@ SOFTWARE.
                     </li>
                     <li>
                         <h1 class='eng'>Recently Watched</h1>
-                        <p class='eng'>Parasite</p>
+                        <p class='eng'>Inside Out</p>
                         <h1 class='kor'>최근 관람</h1>
-                        <p class='kor'>기생충</p>
+                        <p class='kor'>인사이드아웃</p>
                     </li>
                     <li>
                         <h1 class='eng'>Affiliation</h1>
