--- a/resume.html
+++ b/resume.html
@@ -435,7 +435,7 @@ SOFTWARE.
                         </h1>
                         <p class='eng'>*Seungwan Hong, <b>Jai Hyun Park</b>, Wonhee Cho, Hyeongmin Choe, Jung Hee Cheon</p>
                         <p class='kor'>*홍승완, <b>박재현</b>, 조원희, 최형민, 천정희</p>
-                        <p>BMC Medical Genomics, 23.1: 1-19, 2022</p>
+                        <p>BMC Genomics, 23.1: 1-19, 2022</p>
                     </li>  
                     <li>
                         <h1>
