--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@ SOFTWARE.
     <link rel='shortcut icon' href='assets/icons/logo-fill.png' type='image/x-icon'></link>
 
     <style>
-        .main-profile{z-index:20;margin:auto;margin-top:380px;position:relative;margin-bottom:40px}
+        /* .main-profile{z-index:20;margin:auto;margin-top:380px;position:relative;margin-bottom:40px} */
+        .main-profile{z-index:20;margin:auto;margin-top:180px;position:relative;margin-bottom:40px}
         .main-profile *{position:relative!important}
         .main-profile > img {max-width:260px;width:40%;position:relative;margin-left:auto;margin-right:auto}
         .main-profile > div {max-width:600px;width:80%;position:relative;margin-bottom:0px;margin-top:auto;margin-right:auto;margin-left:auto}
@@ -60,19 +61,28 @@ SOFTWARE.
         .main-profile h2 {font-family:'noto-eng-ii','noto-kor-ii';font-size:10pt;color:#bababa}
         .main-profile p {font-family:'noto-eng-ii','noto-kor-ii';font-size:13pt;color:white;text-align:left;margin-top:20px}
         .main-profile ul {margin-top:20px;display:flex}
-        .main-profile li {text-align:left;display:flex;margin-left:0;margin-right:20px}
-        .main-profile li a {display:flex}
-        .main-profile li img {width:22px;height:22px}
-        .main-profile li p {display:inline;margin:auto 5px;font-family:'noto-eng-i','noto-kor-i';font-size:9.5pt;text-align:left;color:white;}
+        .main-profile ul li {text-align:left;display:flex;margin-left:0;margin-right:20px}
+        .main-profile ul li a {display:flex}
+        .main-profile ul li img {width:22px;height:22px}
+        .main-profile ul li p {display:inline;margin:auto 5px;font-family:'noto-eng-i','noto-kor-i';font-size:9.5pt;text-align:left;color:white;margin-bottom:0px!important}
+        .news {position:relative;z-index:20;margin:auto;padding:20px;width:90%;margin-top:60px;background-color: rgba(164,164,164,0.4);margin-bottom:20px}
+        .news *{position:relative!important}
+        .news > h1{font-family:'noto-eng-i','noto-kor-i';font-size:26pt;color:white}
+        .news > h2{font-family:'noto-eng-ii','noto-kor-ii';font-size:10pt;color:#bababa}
+        .news ol {margin-top:15px}
+        .news ol li {list-style-type:none;margin-top:15px}
+        .news ol li h1 {min-width:90px;font-family:'noto-eng-i','noto-kor-i';font-size:12pt;color:white;margin:0px;margin-bottom:auto;text-align:left!important}
+        .news ol li p {font-family:'noto-eng-ii','noto-kor-ii';font-size:12pt;color:white;margin-left:20px;margin-right:auto;text-align:left!important}
+        .news ol li a {font-style:italic;color:antiquewhite}
         @media screen and (max-width: 1000px) {
-            .main-profile{margin-top:110px}
+            .main-profile{margin-top:110px;margin-bottom:20px}
             /* .main-profile > img {margin-top:150px;} */
-            .main-profile > div {margin-top: 40px}
-            .main-profile h1{text-align:center!important}
+            .news > div, .main-profile > div {margin-top: 40px}
+            .news > h1, .news > h2, .main-profile h1{text-align:center!important}
             .main-profile h2{text-align:center!important}
             .main-profile > div > p{text-align:left!important}
-            .main-profile li p {display:none}
-            .main-profile li {margin-left:0!important;margin-right:10px!important}
+            .main-profile ul li p {display:none}
+            .main-profile ul li {margin-left:0!important;margin-right:10px!important}
         }
     </style>
 
@@ -84,6 +94,7 @@ SOFTWARE.
 
     <!-- header -->
     <header class="tall-header" id='header' style='top:0;padding-bottom:70px;background-image:url(assets/imgs/20190206_004354.jpg)'>
+    <!-- <header id='header' style='min-height:95vh;top:0;padding-bottom:70px;background-image:url(assets/imgs/20190206_004354.jpg)'> -->
         <div class='_overlay' style="background-color: rgba(24,24,24,0.95)"></div>
 
         <div class='flex-block main-profile'>
@@ -125,6 +136,28 @@ SOFTWARE.
                 </ul>
             </div>
         </div>
+        <div class="news">
+            <h1>NEWS</h1>
+            <h2>last update: 2022-07-05</h2>
+            <ol>
+                <li class="flex-block">
+                    <h1>Jul 2022</h1>
+                    <p>The paper "Privacy-Preserving Text Classification on BERT Embeddings with Homomorphic Encryption" will be presented at <a href="https://2022.naacl.org/">NAACL 2022</a>.</p>
+                </li>
+                <li class="flex-block">
+                    <h1>Jun 2022</h1>
+                    <p><b>The paper <a href="https://doi.org/10.1109/TIFS.2022.3188145">"Efficient Homomorphic Evaluation on Large Intervals"</a> is accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=10206">IEEE Transactions on Information Forensics and Security</a>.</b></p>
+                </li>
+                <li class="flex-block">
+                    <h1>May 2022</h1>
+                    <p>The paper <a href="https://doi.org/10.1007/s10207-022-00590-x">"Efficient verifiable computation over quotient polynomial rings"</a> was published in <a href="https://www.springer.com/journal/10207">International Journal of Information Security</a>.</p>
+                </li>
+                <li class="flex-block">
+                    <h1>Apr 2022</h1>
+                    <p>The paper <a href="https://doi.org/10.1186/s12864-022-08469-w">"Secure tumor classification by shallow neural network using homomorphic encryption"</a> is accepted to <a href="https://bmcgenomics.biomedcentral.com">BMC Genomics</a>.</p>
+                </li>
+            </ol>
+        </div>
     </header>
 
     <div class="_see-more" style='background-color:rgb(24,24,24);'>
@@ -145,7 +178,8 @@ SOFTWARE.
             </div>
             <p style='width:100%;font-family:"noto-eng","noto-kor";font-size:12pt'>See more posts at <a href='posts.html'>HERE</a></p>
         </section> -->
-    
+
+        
         <section style='height:120px;width:100%;position:relative;overflow:hidden'>
             <img src='assets/imgs/20190814-sac2019.jpg' style='width:100%;height:auto;z-index:5;position:absolute;object-fit:cover' />
             <div class='_overlay' style='background-color:rgba(24,24,24,0.8)'></div>
