--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ SOFTWARE.
         .main-profile ul li a {display:flex}
         .main-profile ul li img {width:22px;height:22px}
         .main-profile ul li p {display:inline;margin:auto 5px;font-family:'noto-eng-i','noto-kor-i';font-size:9.5pt;text-align:left;color:white;margin-bottom:0px!important}
-        .news {position:relative;z-index:20;margin:auto;padding:20px;width:90%;margin-top:60px;background-color: rgba(164,164,164,0.4);margin-bottom:20px}
+        .news {position:relative;z-index:20;margin:auto;padding:20px;width:85%;margin-top:60px;background-color: rgba(164,164,164,0.4);margin-bottom:20px}
         .news *{position:relative!important}
         .news > h1{font-family:'noto-eng-i','noto-kor-i';font-size:26pt;color:white}
         .news > h2{font-family:'noto-eng-ii','noto-kor-ii';font-size:10pt;color:#bababa}
@@ -149,12 +149,12 @@ SOFTWARE.
                     <p><b>The paper <a href="https://doi.org/10.1109/TIFS.2022.3188145">"Efficient Homomorphic Evaluation on Large Intervals"</a> is accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=10206">IEEE Transactions on Information Forensics and Security</a>.</b></p>
                 </li>
                 <li class="flex-block">
-                    <h1>May 2022</h1>
+                    <h1>Apr 2022</h1>
                     <p>The paper <a href="https://doi.org/10.1007/s10207-022-00590-x">"Efficient verifiable computation over quotient polynomial rings"</a> was published in <a href="https://www.springer.com/journal/10207">International Journal of Information Security</a>.</p>
                 </li>
                 <li class="flex-block">
                     <h1>Apr 2022</h1>
-                    <p>The paper <a href="https://doi.org/10.1186/s12864-022-08469-w">"Secure tumor classification by shallow neural network using homomorphic encryption"</a> is accepted to <a href="https://bmcgenomics.biomedcentral.com">BMC Genomics</a>.</p>
+                    <p>The paper <a href="https://doi.org/10.1186/s12864-022-08469-w">"Secure tumor classification by shallow neural network using homomorphic encryption"</a> was published in <a href="https://bmcgenomics.biomedcentral.com">BMC Genomics</a>.</p>
                 </li>
             </ol>
         </div>
