update news and link(SAC19)

--- a/index.html
+++ b/index.html
@@ -138,15 +138,15 @@ SOFTWARE.
         </div>
         <div class="news">
             <h1>NEWS</h1>
-            <h2>last update: 2022-07-05</h2>
+            <h2>last update: 2022-07-16</h2>
             <ol>
                 <li class="flex-block">
-                    <h1>Jul 2022</h1>
-                    <p>The paper "Privacy-Preserving Text Classification on BERT Embeddings with Homomorphic Encryption" will be presented at <a href="https://2022.naacl.org/">NAACL 2022</a>.</p>
+                    <h1>Jun 2022</h1>
+                    <p><b>The paper <a href="https://doi.org/10.1109/TIFS.2022.3188145">"Efficient Homomorphic Evaluation on Large Intervals"</a> was published in <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=10206">IEEE Transactions on Information Forensics and Security</a>.</b></p>
                 </li>
                 <li class="flex-block">
-                    <h1>Jun 2022</h1>
-                    <p><b>The paper <a href="https://doi.org/10.1109/TIFS.2022.3188145">"Efficient Homomorphic Evaluation on Large Intervals"</a> is accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=10206">IEEE Transactions on Information Forensics and Security</a>.</b></p>
+                    <h1>Jul 2022</h1>
+                    <p>The paper "Privacy-Preserving Text Classification on BERT Embeddings with Homomorphic Encryption" was presented at <a href="https://2022.naacl.org/">NAACL 2022</a>.</p>
                 </li>
                 <li class="flex-block">
                     <h1>Apr 2022</h1>
