--- a/resume.html
+++ b/resume.html
@@ -400,7 +400,7 @@ SOFTWARE.
                     </li>
                     <li class="equal">   
                         <h1>
-                            Towards a Practical Cluster Analysis over Encrypted Data<a href='http://eprint.iacr.org/2019/465' style='border:none'><img src='assets/icons/link-open-solid2.png' style='width:15px;height:15px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a>
+                            Towards a Practical Cluster Analysis over Encrypted Data<a href='https://doi.org/10.1007/978-3-030-38471-5_10' style='border:none'><img src='assets/icons/link-open-solid2.png' style='width:15px;height:15px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a>
                         </h1>
                         <p class='eng'>Jung Hee Cheon, Duhyeong Kim, <b>Jai Hyun Park</b></p>
                         <p class='kor'>김두형, <b>박재현</b>, 천정희</p>
@@ -413,8 +413,7 @@ SOFTWARE.
                 <ol reversed class='brief-ul'>
                     <li class="equal">
                         <h1>
-                            Efficient Homomorphic Evaluation on Large Intervals 
-                            <!-- <a href='https://eprint.iacr.org/2022/280' style='border:none'><img src='assets/icons/link-open-solid2.png' style='width:15px;height:15px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a> -->
+                            Efficient Homomorphic Evaluation on Large Intervals<a href='https://doi.org/10.1109/TIFS.2022.3188145' style='border:none'><img src='assets/icons/link-open-solid2.png' style='width:15px;height:15px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a>
                         </h1>
                         <p class='eng'>Jung Hee Cheon, Wootae Kim, <b>Jai Hyun Park</b></p>
                         <p class='kor'>김우태, <b>박재현</b>, 천정희</p>
@@ -423,7 +422,7 @@ SOFTWARE.
 
                     <li>
                         <h1>
-                            Efficient verifiable computation over quotient polynomial rings<a href='https://link.springer.com/article/10.1007/s10207-022-00590-x' style='border:none'><img src='assets/icons/link-open-solid2.png' style='width:15px;height:15px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a>
+                            Efficient verifiable computation over quotient polynomial rings<a href='https://doi.org/10.1007/s10207-022-00590-x' style='border:none'><img src='assets/icons/link-open-solid2.png' style='width:15px;height:15px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a>
                         </h1>
                         <p class='eng'>*<b>Jai Hyun Park</b>, Jung Hee Cheon, Dongwoo Kim</p>
                         <p class='kor'>*<b>박재현</b>, 천정희, 김동우</p>
@@ -431,7 +430,7 @@ SOFTWARE.
                     </li>
                     <li>   
                         <h1>
-                            Secure tumor classification by shallow neural network using homomorphic encryption<a href='https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-022-08469-w' style='border:none'><img src='assets/icons/link-open-solid2.png' style='width:15px;height:15px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a>
+                            Secure tumor classification by shallow neural network using homomorphic encryption<a href='https://doi.org/10.1186/s12864-022-08469-w' style='border:none'><img src='assets/icons/link-open-solid2.png' style='width:15px;height:15px;margin-bottom:3px;margin-left:3px;display:inline-block'/></a>
                         </h1>
                         <p class='eng'>*Seungwan Hong, <b>Jai Hyun Park</b>, Wonhee Cho, Hyeongmin Choe, Jung Hee Cheon</p>
                         <p class='kor'>*홍승완, <b>박재현</b>, 조원희, 최형민, 천정희</p>
