--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ SOFTWARE.
                 </li>
                 <li class="flex-block">
                     <h1>Jul 2022</h1>
-                    <p>The paper "Privacy-Preserving Text Classification on BERT Embeddings with Homomorphic Encryption" was presented at <a href="https://2022.naacl.org/">NAACL 2022</a>.</p>
+                    <p>The paper <a href="https://aclanthology.org/2022.naacl-main.231/">"Privacy-Preserving Text Classification on BERT Embeddings with Homomorphic Encryption"</a> was presented at <a href="https://2022.naacl.org/">NAACL 2022</a>.</p>
                 </li>
                 <li class="flex-block">
                     <h1>Apr 2022</h1>
