--- a/resume.html
+++ b/resume.html
@@ -396,7 +396,7 @@ SOFTWARE.
                         </h1>
                         <p class='eng'>*Garam Lee, *Minsoo Kim, *<b>Jai Hyun Park</b>, Seung-won Hwang, Jung Hee Cheon</p>
                         <p class='kor'>*이가람, *김민수, *<b>박재현</b>, 황승원, 천정희</p>
-                        <p>To be appeared in NAACL 2022 (short)</p>
+                        <p>In NAACL, 2022 (short)</p>
                     </li>
                     <li class="equal">   
                         <h1>
@@ -404,7 +404,7 @@ SOFTWARE.
                         </h1>
                         <p class='eng'>Jung Hee Cheon, Duhyeong Kim, <b>Jai Hyun Park</b></p>
                         <p class='kor'>김두형, <b>박재현</b>, 천정희</p>
-                        <p>In International Conference on Selected Areas in Cryptography (SAC), pp. 227-249. Springer, Cham, 2019</p>
+                        <p>In International Conference on Selected Areas in Cryptography (SAC), 2019</p>
                     </li>  
                 </ol>
 
@@ -417,7 +417,7 @@ SOFTWARE.
                         </h1>
                         <p class='eng'>Jung Hee Cheon, Wootae Kim, <b>Jai Hyun Park</b></p>
                         <p class='kor'>김우태, <b>박재현</b>, 천정희</p>
-                        <p>To be appered in IEEE Transactions on Information Forensics and Security, 2022</p>
+                        <p>IEEE Transactions on Information Forensics and Security, 2022</p>
                     </li>
 
                     <li>
